# SkyHustle

./: .env.example.txt  .gitignore  .pylintrc  Dockerfile  Procfile  README.md  app.py  config.py  constants.py  content.py  core_handlers.py  data.py  deploy-requirements.txt  detect_unused.py  game_handler.py  game_logic.py  google_sheet.py  google_sheets.py  google_sheets_db_manager.py  handlers.py  help.py  main.py  package.json  print_tree.py  pyproject.toml  quick_test.py  registration.py  render.yaml  requirements.txt  resource_manager.py  setname.py  setup_check.py  sheet.py  sheets_api.py  sheets_service.py  test.txt  test_bot.py  test_bot_commands.py  test_commands.py  tsconfig.json  (+2 more)
attached_assets/: Pasted--SkyHustle-Product-Requirements-Document-PRD-1-Executive-Summary-SkyHustle-is-a-Teleg-1746970743160.txt  Pasted-y-yanny-s-workspace-skyhustle-Menu-Search-Ctrl-K-New-Upgrade-y-Dashboard-skyhu-1746995018333.txt  Pasted-y-yanny-s-workspace-y-skyhustle-Menu-Background-Worker-skyhustle-Python-3-Starter-Con-1747061489958.txt
bot/: __init__.py  main.py  telegram_bot.py
config/: alliance_config.py  army_stats.json  battle_tactics.json  building_stats.json  game_config.py  mission_data.json  shop_items.json  unit_abilities.json
core/: __init__.py  army.py  combat.py  economy.py  player.py  zones.py
data/: items.json  missions.json
googleapiclient/: discovery.py
handlers/: __init__.py  abilities.py  achievements.py  achivements.py.txt  admin.py  admin.py.txt  admin_handler.py  ai_commands.py  alliance.py  alliance.py.txt  alliance_handler.py  announce.py  (+79 more)
(+175 files in other folders)
